--- a/note/07.面向对象高级.md
+++ b/note/07.面向对象高级.md
@@ -98,9 +98,107 @@
 
 5. java执行的程序 参数1 参数2 参数3
 
+###  main方法
+
+1. 静态方法main 可以访问本类的静态成员
+
+2. 静态方法main不可以访问本类的非静态成员
+
+3. 静态方法main 要访问本类的非静态成员，需要先创建对象，再调用即可
+
 ## 代码块
 
+### 基本介绍
+
+> 代码块又称为初始化块，属于类中的成员，类似于方法，将逻辑语句封装在方法体中，通过{} 包围起来
+> 和方法不同，没有方法名，没有返回，没有参数,只有方法体，而且不用通过对象或类显示调用，而是加载类时，或创建对象的隐式调用
+
+### 基本语法
+
+```java
+[修饰符] {
+    代码
+};
+```
+
+>  注意事项
+> 
+> 修饰符可选，只能写static
+> 
+> 代码块分为两种，使用static的和不使用static的
+> 
+> 逻辑语句可以为任何逻辑语句
+
+；号可以写上，也可以省略。
+
+### 优点
+
+1. 相当于另外一个形式的构造器，可以做初始化的操作
+
+2. 场景：如果多个构造器中的都有重复的语句，可以抽取到初始化块中，提高代码的复用性
+
+### 代码块使用注意事项
+
+1. static 代码块也叫静态代码块，作用就是对类进行初始化，而且它随着类的加载而执行，并且只会执行一次，如果时普通代码块，每创建一个对象，就执行
+
+2. 类什么时候被加载
+
+   -. 创建对象实例时
+
+   - 创建子类对象实例，父类也会被加载
+
+   - 使用类的静态成员时(静态属性，静态方法)
+
+3. 普通的代码块，在创建对象实例时，会被隐式调用，被创建一次，就会调用一次
+
+> 如果只是使用类的静态成员时，普通代码并不会执行
+
+4. **创建一个对象时，在一个类调用顺序是:**
+
+   - 调用静态代码块和静态属性初始化(注意：静态代码块和静态属性初始化调用的优先级一样，如果有多个静态代码块和多个静态变量初始化，则按他们定义的顺序调用)
+
+   - 调用普通代码块和普通属性的初始化(注意：普通代码块和普通属性初始化的优先级一样，如果有多个普通代码块和多个普通属性初始化，则按定义顺序调用)
+
+5. 构造方法(构造器) 的最前面其实隐含了super() 和 调用普通代码块，新写一个类演示，静态相关的代码块，属性初始化，在类加载时，就执行完毕，因此是优先于构造器和普通代码块可执行的
+
+```java
+class A {
+    public A() {
+        super();
+        {};
+        Sysout.out.ptintln("OK");
+    }
+}
+```
+
+6. 创建一个子类时(继承关系)，他们的静态代码块，静态属性初始化，普通代码块，普通属性初始化，构造方法的调用如下：
+
+   - 父类的静态代码块和静态属性
+
+   - 子类的静态代码块和属性
+
+   - 父类的普通代码块和普通属性初始化
+
+   - 父类的构造方法
+
+   - 子类的普通代码块和普通属性初始化
+
+   - 子类的构造方法
+
+7. 静态代码块只能直接调用静态成员方法(静态属性和静态方法), 普通代码块可以调用任意成员
+
 ## 单例设计模式
+
+### 什么是设计模式
+1. 静态方法和属性的经典使用
+
+2. 设计模式是在大量的实践中总结和理论化之后优选的代码结构，编程风格、以及解决问题的思考方式。设计模式就像是经典的棋谱 
+
+### 什么是单例模式
+
+1. 所谓类的单例模式，就是采取一定的方法保证在整个的软件中，对某个类只能存在一个对象实例，并且该类只提供一个取得其对象实例的方法
+
+2. 单例模式有两种方式：1. 俄汉式 2. 懒汉式
 
 ## final关键字
 
