--- a/note/07.面向对象高级.md
+++ b/note/07.面向对象高级.md
@@ -198,9 +198,29 @@ class A {
 
 1. 所谓类的单例模式，就是采取一定的方法保证在整个的软件中，对某个类只能存在一个对象实例，并且该类只提供一个取得其对象实例的方法
 
-2. 单例模式有两种方式：1. 俄汉式 2. 懒汉式
+2. 单例模式有两种方式：1. 饿汉式 2. 懒汉式
+
+### 饿汉式和懒汉式的区别
+
+1. 创建对象的时机不同：饿汉式是在类加载就创建了对象实例，而懒汉式是在使用时才创建
+
+2. 饿汉式不存在线程安全问题，懒汉式存在线程安全问题。
+
+3. 饿汉式存在资源浪费的可能，因为如果程序员一个对象都没有使用，那么饿汉式创建对象就浪费了，懒汉式则不存在这种可能
 
 ## final关键字
+
+### 基本介绍
+
+> final 可以修饰类、属性、方法和局部变量
+
+1. 当不希望类被继承时，可以用final修饰
+
+2. 当不希望父类的某个方法被子类覆盖/重写时，可以用final关键字
+
+3. 当不希望类的某个属性的值被修改，可以用final修饰
+
+4. 当不希望某个局部变量被修改，可以用final修饰
 
 ## 抽象类
 
