--- a/note/07.面向对象高级.md
+++ b/note/07.面向对象高级.md
@@ -222,8 +222,222 @@ class A {
 
 4. 当不希望某个局部变量被修改，可以用final修饰
 
+### 注意事项
+
+1. final修饰的属性又叫常量，一般用XX_XX来命名
+
+2. final修饰的属性在定义时，必须赋初始值，并且以后不能再修改，赋值可以在如下位置之一
+   - 定义时： public final double TAX_RATE = 0.08;
+
+   - 在构造器中
+
+   - 在代码块中
+
+3. 如果final修饰的属性是静态的，则初始化的位置只能是
+
+   - 定义时
+
+   - 在静态代码块中, 不能在构造其中赋值
+
+4. final类不能继承，但是可以实例化
+
+5. 如果类不是final类，但是含有final方法，则该方法虽然不能重写，但是可以被继承
+
+6. 如果一个类已经是final类了，就没有必要再将方法修饰成final方法了
+
+7. final不能修饰构造方法
+
+8. final和static：往往搭配使用，效率更高，底层编译器做了优化处理
+
+9. 包装类都是final， String也是
+
 ## 抽象类
+
+> 当父类的一些方法不能确定时，可以用abstract关键字来修饰该方法，这个方法就是抽象方法，用abstract来修饰该类就是抽象类
+
+### 基本介绍
+
+1. 用abstract关键字来修饰一个类时，这个类就叫抽象类
+
+```java
+访问修饰符 abstract 类名 {
+
+}
+```
+
+2. 用abstract关键字来修饰一个方法时，这个方法就是抽象方法，访问修饰符abstract 返回类型 方法名(参数列表)；
+
+3. 抽象类的价值更多作用在于设计，是设计者设计好后，让子类继承并实现抽象类()
+
+### 注意事项
+
+1. 抽象类不能被实例化
+
+2. 抽象类不一定要包含abstract方法，抽象类可以没有abstract方法
+
+3. 一旦类包含了abstract方法，则这个类必须声明为abstract
+
+4. abstract只能**修饰类和方法**，不能修饰属性和其他的。
+
+5. 抽象类可以有任意成员**抽象类的本质还是类**
+
+6. 抽象方法不能有主体
+
+7. 如果一个类继承了抽象类，则它必须实现抽象类的所有抽象方法，除非它自己也声明为abstract类
+
+8. 抽象方法不能和private、final和static来修饰，因为这些关键字都和重写相违背。
+
+### 模板设计模式
 
 ## 接口
 
+### 基本介绍
+
+> 接口就是给出一些没有实现的方法，封装在一起，到某个类要使用的时候，在根据具体情况把这些方法写出来
+
+```java
+interface name {
+    context;
+    method();
+}
+```
+
+1. jdk7.0之前，接口里所有的方法都没有方法体。
+
+2. jdk8.0后，接口可以有静态方法，默认方法.
+```java
+interface interface01 {
+    default void method01() {
+    }
+
+    static void method02() {
+    }
+}
+```
+
+### 注意事项
+
+1. 接口不能被实例化
+
+2. jdk7 接口中所有方法都是public方法 **jdk8 添加default和static**，抽象方法可以不加abstract。
+
+3. 一个普通类实现接口，就必须将该接口的所有方法实现
+
+4. 抽象类实现接口，可以不用实现接口的方法
+
+5. 一个类同时可以**实现**多个接口
+
+6. 接口中的属性，只能是final的，而且是public static final 修饰符
+
+```java
+int a = 1; // public static final int a = 1;
+```
+
+7. 接口中属性的访问形式：接口名.属性名
+
+8. 一个接口不能**继承**其它的类，但是可以继承多个别的**接口**
+
+```java
+
+interface ID extends IB, IC {
+}
+
+interface IB {
+}
+
+interface IC {
+}
+
+```
+
+9. **接口**的修饰符，只能是public或默认
+
+### 接口 vs 继承
+
+1. 接口和继承解决的问题不同
+
+   - 继承的价值主要在于：解决代码的复用性和可维护性
+
+   - 接口的价值在于：设计，设计好各种规范(方法), 让其它类去实现这些方法
+
+2. 接口比继承更灵活
+
+   - 接口比继承更加灵活，继承是满足is-a的关系，而接口只需满足like-a的关系
+
+3. 接口在一定程度上实现代码解耦
+
+### 接口的多态特性
+
+1. 多态参数
+
+2. 多态数组
+
+3. 接口存在多态传递现象
+
 ## 内部类
+
+### 基本介绍
+
+> 一个类的内部又完整嵌套了另一个类结构，被嵌套的类称为内部类(inner class), 嵌套其他类的类称为外部类。是我们类的第五大成员，内部类最大的特点就是可以直接访问私有属性，并且可以体现类与类之间的关系
+
+```java
+class Outer {
+    class Inner {
+
+    }
+}
+
+class Other {
+}
+```
+
+### 内部类分类
+
+#### 定义在外部局部位置上
+
+##### 局部内部类
+
+> 1. 局部内部类定义在方法中/代码块
+> 2. 作用域在方法体或者代码块中
+> 3. 本质仍然是一个类
+
+   - 定义在外部类的局部位置，比如方法中，并且有类名
+
+   1. 可以直接访问外部类的所有成员，包含私有的
+
+   2. 不能添加访问修饰符，因为它的地位就是一个局部变量。局部变量是不能使用修饰符的。但是可以使用final修饰，因为局部变量也可以使用final。
+
+   3. 作用域：仅仅在定义它的方法或代码块中
+
+   4. 局部内部类---访问----》外部类的成员
+
+   5. 外部类---访问---》局部内部类的成员
+
+      - 访问方式：创建对象，再访问
+
+   6. 外部其它类---不能访问-----》局部内部类 (局部内部类地位是一个局部变量)
+
+   7. 如果外部类和局部内部类的成员重名时，默认遵循就近原则，如果想访问外部类的成员，则可以使用(外部类名.this.成员) 去访问
+
+
+##### 匿名内部类
+
+   1. 本质仍然是一个类
+   2. 内部类
+   3. 该类没有名字
+
+   > 匿名内部类是定义在外部类的局部位置，不如方法值哦个，并且没有类名
+
+   1. 匿名内部类的基本语法
+
+   ```java
+   new 类或接口 (参数列表) {
+       类体;
+   };
+   ```
+
+#### 定义在外部类的成员位置上
+
+1. 成员内部类
+
+2. 静态内部类
