add enum and annotation

--- a/note/07.面向对象高级.md
+++ b/note/07.面向对象高级.md
@@ -139,7 +139,7 @@
 
 ### 代码块使用注意事项
 
-1. static 代码块也叫静态代码块，作用就是对类进行初始化，而且它随着类的加载而执行，并且只会执行一次，如果时普通代码块，每创建一个对象，就执行
+1. static 代码块也叫静态代码块，作用就是对类进行初始化，而且它随着类的加载而执行，并且只会执行一次，如果是普通代码块，每创建一个对象，就执行
 
 2. 类什么时候被加载
 
@@ -422,22 +422,105 @@ class Other {
 
 ##### 匿名内部类
 
-   1. 本质仍然是一个类
-   2. 内部类
-   3. 该类没有名字
+1. 本质仍然是一个类
+2. 内部类
+3. 该类没有名字
 
-   > 匿名内部类是定义在外部类的局部位置，不如方法值哦个，并且没有类名
+> 匿名内部类是定义在外部类的局部位置，比如方法中，并且没有类名
 
-   1. 匿名内部类的基本语法
+1. 匿名内部类的基本语法
 
-   ```java
-   new 类或接口 (参数列表) {
-       类体;
-   };
-   ```
+```java
+new 类或接口 (参数列表) {
+   类体;
+};
+
+// 外部类$1
+```
+
+### 细节
+
+1. 匿名内部类的语法比较奇特，因为匿名内部类既是一个类的定义，同时它也是一个对象，从语法上看，它既有定义类的特征，也有创建对象的特征。
+
+2. 可以直接访问外部类的所有成员，包含私有的
+
+3. 不能添加访问修饰符，因为它的地位就是一个局部变量。局部变量是不能使用修饰符的。但是可以使用final修饰，因为局部变量也可以使用final。
+
+4. 作用域：仅仅在定义它的方法或代码块中
+
+6. 匿名内部类---访问---> 外部类成员
+
+7. 外部其他类---不能访问---> 匿名内部类
+
+8. 如果外部类和匿名内部类的成员重名时，内部类访问的话，默认遵循就近原则，如果想访问外部类的成员，则可以使用(外部类名.this.成员)去访问
 
 #### 定义在外部类的成员位置上
 
-1. 成员内部类
+##### 成员内部类
 
-2. 静态内部类
+> 成员内部类是定义在外部类的成员位置，并且没有static修饰
+
+1. 可以直接访问外部类的所有成员, 包含私有的
+
+2. 可以添加任意访问修饰符(public protected default private)
+
+3. 作用域 和外部类的其他成员一样，为整个类体
+
+4. 成员内部类---访问---> 外部类 
+```java
+(context) [访问方式：直接访问]
+```
+
+5. 外部类--->访问---> 内部类(说明) 
+    - 访问方式 : 创建对象，再访问
+
+6. 外部其他类---访问---> 成员内部类
+
+```java
+// 1. 第一种调用方式
+Outer outer = new Outer();
+Outer.Inner inner = outer.Inner();
+
+// 2
+Outer.Inner inner = outer.getInnerInstance();
+
+class Outer {
+    class Inner {
+
+    }
+
+    public Inner getInnerInstance() {
+        return new Inner();
+    }
+}
+
+// 3.
+Outer.Inner inner = new Outer().getInnerInstance();
+
+```
+
+7. 如果外部类和匿名内部类的成员重名时，内部类访问的话，默认遵循就近原则，如果想访问外部类的成员，则可以使用 (外部类.this.context) 去访问
+
+##### 静态内部类
+
+> 静态内部类时定义在外部类的成员位置，并且有static修饰
+
+1. 可以直接访问外部类的所有静态成员，包含私有的，但不能直接访问非静态成员
+
+2. 可以添加任意访问修饰符(public protected default private) 因为它的地位就是一个成员
+
+3. 作用域: 同其他成员，为整个类体
+
+4. 静态内部类---访问---> 外部类(静态属性) [访问方式： 直接访问所有静态成员]
+
+5. 外部类--->访问---> 静态内部类 访问方式：创建对象，再访问
+
+```java
+Outer.Inner inner = new Outer.Inner();
+
+Outer.Inner inner = new Outer().getInnerInstance();
+```
+
+6. 外部其他类---访问----> 静态内部类
+
+7. 如果外部类和静态内部类的成员重名时，静态内部类访问的是，默认遵循就近原则，如果访问外部类的成员，则可以使用(外部类名.成员名)去访问
