--- a/note/07.面向对象高级.md
+++ b/note/07.面向对象高级.md
@@ -409,13 +409,13 @@ class Other {
 
    3. 作用域：仅仅在定义它的方法或代码块中
 
-   4. 局部内部类---访问----》外部类的成员
+   4. 局部内部类---访问---->外部类的成员
 
-   5. 外部类---访问---》局部内部类的成员
+   5. 外部类---访问--->局部内部类的成员
 
       - 访问方式：创建对象，再访问
 
-   6. 外部其它类---不能访问-----》局部内部类 (局部内部类地位是一个局部变量)
+   6. 外部其它类---不能访问----->局部内部类 (局部内部类地位是一个局部变量)
 
    7. 如果外部类和局部内部类的成员重名时，默认遵循就近原则，如果想访问外部类的成员，则可以使用(外部类名.this.成员) 去访问
 
