--- a/note/09.异常.md
+++ b/note/09.异常.md
@@ -1,12 +1,64 @@
 # 异常的概念
 
+> java语言中，将程序执行中发生的不正常情况称为"异常"。
+
+1. Error(错误): java虚拟机无法解决的严重问题。如：JVM系统内部错误、资源耗尽等严重情况。比如: StackOverflowError[栈溢出]和OOM(out of memory), Error是严重错误，程序会崩溃。
+
+2. Exception: 其他因编程错误或偶然的外在因素导致的一般性问题，可以使用针对性的代码进行处理。例如空指针访问，试图读取内存不存在的文件，网络连接中断等等，Exception分为两大类：运行时异常和编译时异常。
+
 # 异常体系图
+
+![异常体系图](./09.异常/1.异常体系图.png)
+
+## 小结
+
+1. 异常分为两大类，运行时异常和编译时异常
+
+2. 运行时异常，编译器不要求强制处置的异常。一般是指编程时的逻辑错误，是程序员应该避免其出现的异常。java.lang.RuntimeException类及它的字类都是运行时异常
+
+3. 对于运行时异常，可以不做处理，因为这类异常很普遍，若全处理可能对程序的可读性和运行效率产生影响。
+
+4. 编译时异常， 是编译器要求必须处置的异常。
 
 # 常见的异常
 
+## NullPointerException 空指针异常
+
+> 当应用程序时图在需要对象的地方使用null时，抛出异常
+
+## ArithmeticException 数学运算异常
+
+## ArrayIndexOutOfBoundsException 数组下标越界异常
+
+## ClassCastException 类型转换异常
+
+## NumberFormatException 数字格式不正确异常
+
 # 异常处理概念
 
+## 基本介绍
+
+> 异常处理就是当异常发生时，对异常处理的方式。
+
 # 异常处理分类
+
+## try-catch-finally
+
+```java
+try {
+
+} catch () {
+
+} finally {
+    
+}
+```
+
+## throws
+
+```java
+throws
+```
 
 # 自定义异常
 
