--- a/note/03.运算符.md
+++ b/note/03.运算符.md
@@ -85,7 +85,19 @@ b += 2; // --> b = (byte) (b + 2);
 > 条件表达式 ? 1 : 2;
 
 ### detail
-表达式1和表达式2要为可以赋给接受变量的类型
+
+> 表达式1和表达式2要为可以赋给接受变量的类型
+
+```java
+Object obj1 = true ? new Integer(1) : new Double(2.0);
+
+// 三元运算符是一个整体，会提升成double
+System.out.println(obj1); 
+//jdk8 1.0
+// jdk11 Integer(int) 已经过时
+```
+
+
 
 ## 运算符的优先级
 
