--- a/note/10.常用类.md
+++ b/note/10.常用类.md
@@ -1,1 +1,106 @@
-#
+# 包装类
+
+![包装类](./10.常用类/1.包装类.png)
+
+## 包装类和基本数据的转换
+
+1. jdk5 前的手动装箱和拆箱方式，装箱：基本类型-> 包装类型，反之，拆箱
+
+2. jdk5 以后的自动装箱和拆箱方式
+
+3. 自动装箱底层调用的是valueOf方法
+
+### 包装类转Stringss
+
+```java
+Integer i = 1;
+// 1. 
+i + "";
+
+// 2.
+i.toString();
+
+// 3.
+String.valueOf(i);
+```
+
+### String转包装类
+
+```java
+String str = "";
+Integer i1 = Integer.parseInt(str);
+Integer i2 = new Integer(str);
+```
+
+### Integer面试总结
+
+```java
+// 范围 -128～127返回的为cache数组的值,否则返回的是new的Integer的对象
+if (i >= IntegerCache.low && i <= IntegerCache.high)
+    return IntegerCache.cache[i + (-IntegerCache.low)];
+    return new Integer(i);
+```
+
+> 只要有基本数据类型，判断的就是值是否相同
+
+# String类
+
+## String类的理解和创建对象
+
+1. String对象用于保存字符串，也就是一组字符序列
+
+2. 字符串常量对象是用双引号括起来的字符序列。
+
+3. 字符串的字符使用Unicode字符编码，一个字符(不区分字母还是汉字)，占两个字节
+
+4. String类较常用构造方法：
+
+```java
+String s1 = new String();
+String s2 = new String(String original);
+String s3 = new String(char[] a);
+String s4 = new String(char[] a, int startIndex, int count);
+```
+
+5. String是final的,不可以继承,重写
+
+6. String实现Serializable接口，可以进行网络传输
+
+7. String实现Comparable接口,可以进行比较
+
+8. 底层是使用private final char value[];  The value is used for character storage.
+
+## 创建String的两种方式。
+
+1. String s = "asdfa";
+
+   - 先从常量池查看是否有"asdfa"数据空间，如果有，直接指向；如果没有则重新创建，然后指向。S最终指向的是常量池的空间地址.
+
+2. String s = new String("asdfa");
+    
+   - 先从堆中创建空间，里面维护了value属性，指向常量池的asdfa空间。如果常量池没有，重新创建，如果有，直接通过value指向。最终指向的是堆中的空间地址
+
+## String内存布局
+
+![String内存布局](./10.常用类/2.String内存布局.png)
+
+```java
+When the intern method is invoked, if the pool already contains a
+string equal to this {@code String} object as determined by
+the {@link #equals(Object)} method, then the string from the pool is
+returned. Otherwise, this {@code String} object is added to the
+pool and a reference to this {@code String} object is returned.
+
+new String().intern(); return the pool of string address;
+```
+# StringBuffer和StringBuilder类
+
+# Math类
+
+# Date日期类、Calendar日历类以及新的日期
+
+# System类
+
+# Arrays类
+
+# BigInteger和BigDecimal类
