--- a/note/10.常用类.md
+++ b/note/10.常用类.md
@@ -93,14 +93,116 @@ pool and a reference to this {@code String} object is returned.
 
 new String().intern(); return the pool of string address;
 ```
+
+```java
+public class Test1 {
+    String str = new String("hsp");
+    final char[] ch = {'j', 'a', 'v', 'a'};
+
+    public void change(String str, char ch[]) {
+        str = "java";
+        ch[0] = 'h';
+    }
+
+    public static void main(String[] args) {
+        Test1 ex = new Test1();
+        ex.change(ex.str, ex.ch);
+        System.out.print(ex.str + " and ");
+        System.out.print(ex.ch); // shp and hava
+    }
+}
+
+```
+
+## String的常用方法
+
+> String类是保存字符串常量的，每次更新都需要重新开辟空间，效率低，因此提供了StringBuilder和StringBuffer来增强String的功能，并提高效率
+
+![String常见方法](./10.常用类/3.String常见方法.png)
+
 # StringBuffer和StringBuilder类
 
+## StringBuffer类
+
+1. java.lang.StringBuffer代表可变的字符序列，可以对字符串内容进行增删
+
+2. 很多方法与String相同，但是StringBuffer是可变长度的
+
+3. StringBuffer是一个容器
+
+## String VS StringBuffer
+
+1. String保存的是字符串常量，里面的值不能更改，每次String类的更新实际上就是更改地址，效率较低 \//private final char[] value;
+
+2. StringBuffer保存的是字符串常量，里面的值可以更改，每次StringBuffer的更新实际上可以更新内容，不用更新地址，效率更高。 \//char[] value;
+
+## StringBuffer的构造器
+
+![StringBuffer构造器](./10.常用类/4.StringBuffer的构造器.png)
+
+## String和StringBuffer相互转换
+
+```java
+// StringBuffer ---> String
+String s = "hello";
+
+// 1. 
+StringBuffer b1 = new StringBuffer(s);
+
+// 2.
+StringBuffer b2 = new StringBuffer();
+b2.append(s);
+
+// String ---> StringBuffer
+
+// 1.
+
+String s2 = b1.toString();
+
+String s3 = new String(b1);
+
+```
+
+## StringBuilder类
+
+1. 一个可变的字符序列。此类提供一个与StringBuffer兼容的API，但不保证同步。该类呗设计用作StringBuffer的一个简易替换。**用在字符串缓冲区被单个线程使用的时候**，如果可能，建议优先采用该类，因为在大多数实现中，它比StringBuffer要快。
+
+2. 在StringBuilder上的主要操作时append和insert方法，可重载这些方法，以接受任意类型的数据。
+
+![比较](./10.常用类/5.String、StringBuilder和StringBuffer的比较.png)
+
+## 使用结论
+
+1. 如果字符串存在大量的修改操作，一般使用StringBuffer或Stringbuilder
+
+2. 如果字符串存在大料的修改操作，并在单线程的情况下，使用StringBuilder
+
+3. 如果字符串存在大料的修改操作，并在多线程的情况下，使用StringBuffer
+
+4. 如果我们字符串很少修改，被多个对象引用，使用String，比如配置信息等
+
 # Math类
+
+```java
+int num = (int) (Math.random() * (b - a + 1) + a);
+```
 
 # Date日期类、Calendar日历类以及新的日期
 
 # System类
 
 # Arrays类
+
+> 用于管理或操作数组(比如排序和搜索)
+
+1. toString 返回数组的字符串形式
+   - Arrays.toString(arr);
+
+2. sort排序(自然排序和定制排序) Integer arr[] = {1, -1, 7, 0, 89};
+
+3. binarySearch 通过二分搜索法进行查找，要求必须排好序
+```java
+int index = Arrays.binarySearch(arr, 3);
+```
 
 # BigInteger和BigDecimal类
