--- a/note/10.常用类.md
+++ b/note/10.常用类.md
@@ -187,9 +187,15 @@ String s3 = new String(b1);
 int num = (int) (Math.random() * (b - a + 1) + a);
 ```
 
-# Date日期类、Calendar日历类以及新的日期
-
 # System类
+
+1. exit
+
+2. arraycopy
+
+3. currentTimeMillens: 返回当前时间距离1970-1-1的毫秒数
+
+4. gc运行垃圾回收机制System.gc()
 
 # Arrays类
 
@@ -201,8 +207,47 @@ int num = (int) (Math.random() * (b - a + 1) + a);
 2. sort排序(自然排序和定制排序) Integer arr[] = {1, -1, 7, 0, 89};
 
 3. binarySearch 通过二分搜索法进行查找，要求必须排好序
+
 ```java
 int index = Arrays.binarySearch(arr, 3);
 ```
 
 # BigInteger和BigDecimal类
+
+1. BigInteger适合保存比较大的整型
+
+2. BigDecimal适合保存精度更高的浮点型
+
+   - divide可能会抛出ArithmeticException, 限定精度可以解决
+
+```java
+BigDecimal bigDecimal = new BigDecimal("1999.1324321512343513412353124151234")
+BigDecimal bigDecimal = new BigDecimal("2")
+bigDecimal.divide(bigDecimal2, BigDecimal.ROUND_CEILING);
+```
+
+# Date日期类、Calendar日历类以及新的日期
+
+## Date and SimpleDateFormat
+
+## Calendar存在的问题
+
+1. 可变性: 像日期和时间这样的类应该是不可变的
+
+2. 偏移性：Date中的年份是从1900开始的，而月份都是从0开始的。
+
+3. 格式化：格式化只对Date有用，Calendar则不行
+
+4. 他们不是线程安全的，不能处理闰秒 (每隔2天，多出一秒)
+
+## LocalDate LocatTime LocalDateTime
+
+1. LocalDate 只包含日期(年月日)
+
+2. LocalTime 只包含时间,可以获取时间字段(时分秒)
+
+3. LocalDateTime 包含日期+时间,可以获取时间字段(年月日时分秒)
+
+## DataTimeFormatter格式日期类
+
+
