--- a/note/11.集合.md
+++ b/note/11.集合.md
@@ -167,3 +167,87 @@
 4. HashSet不保证元素是有序的, 取决于hash后, 再确定索引的结果
 
 5. 不能有重复元素/对象
+
+### LinkedHash说明
+
+1. LinkedHashSet是HashSet的子类
+
+2. LinkedHashSet底层是一个LinkedHashMap, 底层维护了一个数组+双向链表
+
+3. LInkedHashSet根据元素的hashCode值来决定元素的存储位置，同时使用链表维护元素的次序，这使得元素看起来是以插入顺序来保存的
+
+4. LinkedHashSet不允许添加重复元素
+
+## Map接口
+
+### Map实现类的特点
+
+1. Map与Collection并列存在，用于保存具有映射关系的数据：key-Value
+
+2. Map中的key和values可以是任何引用数据类型的数据,会封装到HashMap$Node对象中
+
+3. Map中的key不允许重复
+
+4. Map中的value可以重复
+
+5. Map的key可以为null,value也可以为null,注意key为null只能有一个，value为null,可以有多个
+
+6. 常用的String类作为Map的key
+
+7. key和value之间存在单向一对一关系, 即通过指定的key总能找到对应的value
+
+8. Map存放数据的key-value,一对k-v是放在一个HashMap￥Node中的，又因为Node实现了Entry接口,所以说k-v是一个entry
+
+### Map的遍历方式
+
+1. containKey:查找键是否存在
+
+2. keySet获取所有的键
+
+3. entrySet: 获取所有关系k-v
+
+4. values: 获取所有的值
+
+### Map接口实现类
+
+1. Map接口的常用实现类: HashMap、Hashtable 和 Properties
+
+2. HashMap是Map接口使用频率最高的实现类
+
+3. HashMap是以Key-val对的方式来存储数据
+
+4. key不能重复, 但是是值可以重复, 允许使用null键和null值的
+
+5. 如果添加相同的key, 则会覆盖原来的key-val, 等同于修改。
+
+6. 与HashSet一样, 不保证映射的顺序, 因为底层是以hash表的方式来存储的
+
+7. HashMap没有实现同步, 因此是线程不安全的
+
+### HashMap的底层机制与源码剖析
+
+![map底层](./11.集合/10.HashMap底层机制以及源码剖析.png)
+
+### HashTable的基本介绍
+
+1. 存放的元素是键值对
+
+2. hashtable的键和值都不能为null,否则会抛出NUllPointerExcetion
+
+3. hashtable使用方法基本上和HashMap一样
+
+4. hashTable是线程安全的，hashMap是线程不安全的
+
+### Hashtable和HashMap对比
+
+![对比](./11.集合/11.Hashtable和HashMap对比.png)
+
+### Properties
+
+1. Properties类继承自Hashtable类并且实现了Map接口,也是使用键值对的形式来保存数据
+
+2. 使用特点和Hashtable类似
+
+3. Properties还可以用于从xxx.properties文件中,加载数据到Properties类对象, 并进行读取和修改
+
+4. xxx.properties文件通常作为配置文件
