--- a/note/11.集合.md
+++ b/note/11.集合.md
@@ -251,3 +251,74 @@
 3. Properties还可以用于从xxx.properties文件中,加载数据到Properties类对象, 并进行读取和修改
 
 4. xxx.properties文件通常作为配置文件
+
+## 开发中如何选择集合实现类
+
+1. 先判断存储的类型(一组对象[单列]或一组键值对[双列])
+
+2. 一组对象[单列]: Collection接口
+
+   - 允许重复: List
+
+      - 增删多: LinkedList[底层维护了一个双向链表]
+
+      - 改查多: ArrayList[底层维护了Object类型的可变数组]
+
+   - 不允许重复: Set
+
+      - 无序: HashSet[底层是HashMap, 维护了一个哈希表 即(数组+链表+红黑树)]
+
+      - 排序: TreeSet
+
+      - 插入和取出顺序一致: LinkedHashSet, 维护数组+双向链表
+
+3. 一组键值对: Map
+
+      - 键无序: HashMap[底层是: 哈希表 jdk7: 数组+链表, jdk8:数组+链表+红黑树]
+
+      - 键排序: TreeMap
+
+      - 键插入和取出顺序一致: LinkedHashMap
+
+      - 读取文件: Properties
+
+
+## Collection工具类
+
+### Collection工具类介绍
+
+1. Collection是一个操作Set、List和Map等集合的工具类
+
+2. Collections中提供了一系列静态的方法对集合元素进行查询排序和修改等操作
+
+### 排序操作
+
+1. reverse(List): 反转List元素的顺序
+
+2. shuffle(List): 对List集合元素进行随机排序
+
+3. sort(List) 根据元素的自然顺序对指定List集合元素按升序排序
+
+4. sort(List, Comparptor): 根据指定的Comparator产生的顺序对List集合元素进行排序
+
+5. swap(List, int, int): 将指定list集合的i处元素和j处元素进行交换
+
+## 代码分析
+
+```java
+TreeSet treeSet = new TreeSet();
+treeSet.add(new Person())
+
+class Person {}
+
+// compare
+// compare(key, key); // type (and possibly null) check
+// final int compare(Object k1, Object k2) {
+//     return comparator==null ? ((Comparable<? super K>)k1).compareTo((K)k2)
+//         : comparator.compare((K)k1, (K)k2);
+// }
+
+因为底层是TreeMap, 在调用add的put时,首次添加,会使用compare去校验null,此时对k1有一个comparable的转换,因为person没有实现Comparator接口,导致不能强转, 造成ClassCastException
+
+// Class
+```
