--- a/note/18.数据库.md
+++ b/note/18.数据库.md
@@ -20,3 +20,62 @@
 
 ![常用数据类型](./18.数据库/1.MySQL常用数据类型.png)
 
+## 整数
+
+## bit
+
+```sql
+CREATE TABLE table1 (num BIT(8));
+```
+
+## 小数型
+
+DECIMAL[M,D] [UNSIGNED]
+
+> M是小数位数的(精度)的总数, D是小数点(标度)后面的位数
+>
+> 如果D是0, 则值没有小数点或分数部分.M最大65, D最大是30, 如果d被省略, 默认是0 如果M被省略, 默认是10
+>
+> 建议: 如果希望小数的进度高,推荐使用decimal
+
+```sql
+CREATE TABLE table1 (num1 FLOAT,
+                     num2 DOUBLE,
+                     num3 DECIMAL(30, 20));
+```
+
+## 字符串
+
+CHAR(size) 0~255
+
+VARCHAR(size) 0~65535
+可变长度字符串 最大65532字节 [utf编码最大21844字符 1-3个字节用于记录大小]
+
+### 细节
+
+#### 细节一
+
+1. char(4) //4表示字符数(最大255), 不是字节数,不管是中文还是字母都是放四个,按字符计算
+
+2. varchar(4) // 4表示字符, 不管是字母还是中文都以定义好的表的编码来存放数据
+
+#### 细节二
+
+char(4)是定长(固定的大小), 即使你插入'aa',也会占用分配4个字符的空间
+
+varchar(4)是变长(变化的大小), 就是说, 如果你插入了'aa', 实际占用空间大小并不是4个字符, 而是按照实际占用空间来分配
+
+#### 细节三
+
+1. 什么时候用char, 什么时候使用varchar
+
+1. 如果数据是定长, 推荐使用char, 比如md5的密码, 邮编, 手机号,身份证号等等. char(32)
+
+2. 如果一个字段的长度是不确定,我们使用varchar, 比如留言,文章
+
+#### 细节四
+
+1在存放文本时, 也可以使用Text数据类型, 可以将TEXT列视为VARCHAR列, 注意Text不能有默认值, 大小0`2^16字节,如果希望存放更多字符,可以选择MEDIUMTEXT 0-2^24 或者 LOGNTEXT 0-2^32
+
+```sql
+CREATE TABLE t2 (content1 TEXT, content2 MEDIUMTEXT, content3 LONGTEXT); ```
