--- a/note/18.数据库.md
+++ b/note/18.数据库.md
@@ -92,6 +92,10 @@ CREATE TABLE birthday6 (t1 DATE, t2 DATETIME, t3 TIMESTAMP NOT NULL DEFAULT CURR
 
 ## insert插入细节
 
+```sql
+INSERT INTO table_name values();
+```
+
 1. 插入的数据与字段的数据类型相同
 
 2. 数据的长度应在列的规定范围内
@@ -107,3 +111,41 @@ CREATE TABLE birthday6 (t1 DATE, t2 DATETIME, t3 TIMESTAMP NOT NULL DEFAULT CURR
 7. 如果是给表中的所有字段添加数据, 可以不写前面的字段名称
 
 8. 默认值的使用, 当不给某个字段值时, 如果有默认值就会添加, 否则报错
+
+## update更新细节
+
+```sql
+UPDATE table_name SET key=value WHERE key=value;
+```
+
+1. update语法可以用新值更新原有表行中的各列
+
+2. set子句指示要修改那些列和要给予哪些值
+
+3. where子句指定应更新那些行,如没有where子句,则更新所有行
+
+4. 如果需要修改多个字段, 可以通过set字段1=值1, 字段2=值2...
+
+## delete删除细节
+
+```sql
+DELETE FROM table_name WHERE key=value;
+```
+
+## select查询细节
+
+### 单表
+
+```sql
+SELECT column1,column2 from table_name;
+```
+
+#### where子句中使用的运算符
+
+![运算符](./18.数据库/3.where子句常用运算符.png)
+
+#### count细节
+
+> count(*)和count(name)当为null时,会有区别
+
+### 多表
