--- a/note/18.数据库.md
+++ b/note/18.数据库.md
@@ -148,4 +148,53 @@ SELECT column1,column2 from table_name;
 
 > count(*)和count(name)当为null时,会有区别
 
+#### group by
+
+```sql
+select deptno, avg(sal) as avgsal from emp group by deptno having avgsal < 2000;
+```
+
+#### 字符串
+
+![字符串相关函数](./18.数据库/4.字符串相关函数.png)
+
+#### 数学相关函数
+
+![函数](./18.数据库/5.数学相关函数.png)
+
+#### 时间日期相关函数
+
+![函数](./18.数据库/6.时间日期相关函数.png)
+
+```sql
+select * from mes where date_add(send_time, INTERVAL 10 MINUTES) >= now();
+```
+
+##### detail
+
+1. DATE_ADD() 中的interval后面可以是year minute second day等
+
+2. DATE_SUB() 中的 interval后面可以是year minute second day等
+
+3. DATEDIFF(date1, date2)得到的是天数,而且是date1-date2的天数, 因此可以取负数
+
+4. 这四个函数的日期类型可以是date,datetime 或者 timestamp
+
+```sql
+// return from 1970-1-1 to now ms
+select unix_timestamp() from dual;
+
+// format ms to time
+select from_unixtime(unix_timestamp(), '%Y-%M-%d %H:%I:%S') from dual;
+```
+
+#### 加密和系统函数
+
+![函数](./18.数据库/7.加密和系统函数.png)
+
+#### 流程控制
+
+![函数](./18.数据库/8.流程控制.png)
+
 ### 多表
+
