--- a/note/18.数据库.md
+++ b/note/18.数据库.md
@@ -196,5 +196,183 @@ select from_unixtime(unix_timestamp(), '%Y-%M-%d %H:%I:%S') from dual;
 
 ![函数](./18.数据库/8.流程控制.png)
 
+#### 分页查询
+
+```sql
+select * from limit rows * (pages - 1), rows;
+```
+
 ### 多表
 
+#### 笛卡儿集
+
+```sql
+select ename, sal, dname, emp.deptno from emp, dept where emp.deptno = dept.deptno;
+```
+
+在默认情况下: 当两个表查询时， 规则
+
+1. 从第一张表中, 取出一行和第二张表的每一行进行组合, 返回结果[含有两张表的所有列]
+
+2. 一共返回的记录数从第一张表行数*第二张表的行数
+
+3. 这样多表查询默认处理返回的结果,成为笛卡儿集
+
+4. 解决这个表的关键就是写出正确的过滤条件where
+
+#### 自连接
+
+是指在同一张表的连接查询
+
+#### 子查询
+
+嵌入在其他sql语句中的select语句, 也叫嵌套查询
+
+##### 单行子查询
+
+> 返回一行数据的子查询语句
+
+##### 多行子查询
+
+> 返回当行数据的子查询 使用关键字in
+
+1. 使用all操作符
+
+```sql
+select ename, sal, deptno from emp where sal > all(select sal from emp where deptno = 30);
+```
+
+2. 使用any操作符
+
+```sql
+select ename, sal, deptno from emp where sal > any(select sal from emp where deptno = 30);
+```
+
+#### 多列子查询
+
+> 查询返回多个列数据的子查询语句
+
+##### 表的自我复制
+
+```sql
+insert into my_tab01 select * from my_tab01;
+```
+
+##### union && union all
+
+1. union all
+
+> 该操作符用于取得两个结果集的并集. 当使用该操作符时, 不会取消重复行
+
+```sql
+select ename, sal, job from emp where sal> 2500 union all select ename, sal, job from emp where job='manager';
+```
+
+2. union
+
+```sql
+select ename, sal, job from emp where sal> 2500 union select ename, sal, job from emp where job='manager';
+```
+
+> 与union all相似, 但是会自动去除掉结果集中重复行
+
+#### 外连接
+
+##### 左外连接
+
+```sql
+select stu.id, name, grade from stu left join exam on stu.id = exam.id;
+```
+
+##### 右外连接
+
+```sql
+select stu.id, name, grade from stu right join exam on stu.id = exam.id;
+```
+
+## mysql约束
+
+### 基本介绍
+
+> 约束用于确保数据库的数据满足特定的商业规则. 在mysql中,约束包括: not null, unique, primary key, foreign key 和 check五种.
+
+### primary key
+
+> 用于唯一的标示表行的数据,当定义主键约束后, 该列不能重复
+
+#### 细节
+
+1. primary key 不能重复而且不能为null
+
+2. 一张表最多只能有一个主键, 但可以是复合主键
+
+3. 主键的指定方式有两种
+
+   - 直接在字段名后指定: 字段名 primary key
+
+   - 在表的定义最后写primary key(列名)
+
+4. 使用desc表名, 可以看到primary key的情况
+
+
+### not null
+
+> 如果在列上定义了not null, 那么当插入数据时, 必须为列提供数据
+
+### unique(唯一)
+
+> 当定义了唯一约束后, 该列值不能重复
+
+#### 细节
+
+1. 如果没有指定not null, 则unique字段可以有多个null
+
+2. 一张表可以有多个unique字段
+
+### foreign key(外键)
+
+> 用于定义主表和从表之间的关系: 外键约束要定义在从表上, 主表则必须具有主键约束或是unique约束, 当定义外键约束后, 要求外键列数据必须在主表的主键列存在或是null
+
+#### 细节
+
+1. 外键指向的表的字段, 要求是primary key 或者是unique
+
+2. 表的类型是innodb, 这样的表才支持外键
+
+3. 外键字段的类型要和主键字段的类型一致(长度可以不同)
+
+4. 外键字段的值, 必须在主键字段中出现过, 或者为null[前提是外键字段允许为null]
+
+5. 一旦建立主外键的关系, 数据不能随意删除了
+
+### check
+
+> 用于强制行数据之间必须满足的条件, 假定在sal列上定义了check约束, 并要求sal列值在1000~2000之间如果不再1000~2000之间就会提示出错
+
+### 自增长
+
+```sql
+id int primary auto_increment
+```
+
+#### 细节
+
+1. 一般来说自增长是和primary key配合使用的
+
+2. 自增长也可以单独使用(但是需要配合一个unique)
+
+3. 自增长修饰的字段为整数型的(虽然小数也可以但是非常非常少这样使用)
+
+4. 自增长默认从1开始,你也可以通过如下命令修改alter table 表名 auto_increment = xxx;
+
+5. 如果你添加数据时, 给自增长字段(列)指定的有值, 则以指定的值为准, 如果指定了自增长, 一般来说,就按照自增长的规则来添加数据
+
+## mysql索引
+
+### 主键索引
+
+### 唯一索引
+
+### 普通索引
+
+### 全文索引
