--- a/note/18.数据库.md
+++ b/note/18.数据库.md
@@ -371,8 +371,180 @@ id int primary auto_increment
 
 ### 主键索引
 
+```sql
+create table table_name (id int primary key, `name` varchar(32));
+
+alter table table_name add primary key (id);
+
+alter table table_name drop primary key;
+```
+
 ### 唯一索引
+
+```sql
+create unique index id_index on table(id);
+
+alter table tablename add index id_index(id);
+
+show index from tablename;
+
+show indexs from tablename;
+
+show keys from tablename;
+
+desc tablename;
+
+drop index id_index on tablename;
+```
 
 ### 普通索引
 
 ### 全文索引
+
+### 小结
+
+1. 较频繁的作为查询条件字段应该创建索引
+
+2. 唯一性太差的字段不适合单独创建索引, 即使频繁作为查询条件
+
+3. 更新非常频繁的字段不适合创建索引
+
+4. 不会出现在where子句中字段不该创建索引
+
+## 事务
+
+### 事务的定义
+
+> 事务用于保证数据的一致性, 它由一组相关的dml语句组成,该组的dml语句要么全部成功,要么全部失败.
+
+### 事务和锁
+
+> 当执行事务操作时(dml语句), mysql会在表上加锁, 防止其他用户改表的数据, 这对用户来讲是非常重要的
+
+### mysql数据库控制台事务的几个重要操作
+
+1. start transaction --开始事务
+
+2. savepoint 保存点名 --设置保存点
+
+3. rollback to 报错点名 --回退事务
+
+4. rollback --回退全部事务
+
+5. commit --提交事务, 所有的操作生效, 不能回退
+
+### 事务的细节
+
+1. 如果不开始事务, 默认情况下, dml操作是自动提交的, 不能回滚
+
+2. 如果开始一个事务, 你没有创建保存点, 你可以执行rollback, 默认就是回退到你事务开始的状态
+
+3. 你也可以在这个事务中(还没有提交时), 创建多个保存点.
+
+4. 你可以在事务没有提交前, 选择回退到那个保存点
+
+5. mysql的事务机制需要innodb的存储引擎才可以使用, myisam不好用
+
+6. 开始一个事务 start transaction, set autocommit=off
+
+### 事务的隔离级别
+
+1. 多个连接开启各自事务操作数据库中数据时, 数据库系统要负责隔离操作, 以保证各个连接在获取数据时的准确性
+
+2. 如果不考虑隔离性, 会引发的问题:
+
+   - 脏读: 当一个事务读取另一个事务尚未提交的修改时, 产生脏读
+
+   - 不可重复读: 同一查询在同一事务中多次进行, 由于其他提交事务所做的**修改或删除**,每次返回不同的结果集, 此时发生不可重复读
+
+   - 幻读: 同一查询在同一事务中多次进行,由于其他提交事务所做的**插入**操作, 每次返回不同的结果集, 此时产生幻读
+
+![事务的隔离级别](./18.数据库/9.事务的隔离级别.png)
+
+```sql
+# 1. 查看当前会话隔离级别
+ SELECT @@transaction_isolation;
+
+# 2. 查看系统当前会话隔离级别
+ SELECT @@global.transaction_isolation;
+
+# 3. 设置当前会话隔离级别
+set session transaction isolation level repeatable read;
+
+# 3. 设置系统当前会话隔离级别
+set global transaction isolation level repeatable read;
+```
+
+### 事务的acid特性
+
+1. 原子性(atomicity)
+> 事务是一个不可分割的工作单位,事务中的操作要么都发生,要么都不发生
+
+2. 一致性(Consistency)
+> 事务必须使数据库从一个一致性状态变换到另外一个一致性状态
+
+3. 隔离性(isolation)
+> 事务的隔离性是多个用户并发访问数据库时,数据库为每一个用户开启的事务,不能被其他事务的操作数据所干扰,多个并发事务之间要相互隔离
+
+4. 持久性(Durability)
+> 一个事务一旦被提交,它对数据库中数据的改变就是永久性的,接下来即使数据库发生故障也不应该对其有任何影响
+
+### mysql表类型和存储引擎
+
+1. MySQL的表类型由存储引擎(Storage Engines)决定, 主要包括MyISAM,innoDB, Memory等
+
+2. MySQL数据表主要支持六种类型,分别是:CSV,Memory,ARCHIVE,MRG_MYISAM,MYISAM,InnoDB
+
+3. 事务安全型: InnoDB; 其余均为第二类,非事务安全型
+
+#### MYISAM, InnoDB, Memory
+
+1. MYISAM不支持事务,也不支持外键,但其访问速度快,对事务完整性没有要求
+
+2. InnoDB存储引擎提供了具有提交,回滚和崩溃恢复能力的事务安全.但是比起MyISAM存储引擎,InnoDB写的处理效率差一些并且会占用更多的磁盘空间以保留数据和索引
+
+3. Memory存储引擎使用存在内存中的内容来创建表.每个Memory表只实际对应一个磁盘文件.Memory类型的表访问非常得快,因为它的数据是放在内存中并且默认使用HASH索引.但是一旦服务关闭,表中的数据就会丢失掉,表的结构还在.
+
+## 视图
+
+1. 视图是一个虚拟表,其内容由查询定义.同真实的表一样,视图包含列,其数据来自对于的真实表(基表)
+
+### 视图的基本使用
+
+```sql
+create view viewname as select;
+
+alter view viewname as select;
+
+show create view viewname;
+
+drop view viewname;
+```
+
+### 视图的细节
+
+1. 创建视图后,到数据库去看,对于视图只有一个视图结构文件(viewname.frm)
+
+2. 视图的数据变化会影响到基表,基表的数据变化也会影响到视图[insert update delete]
+
+3. 视图中可以再使用视图
+
+### 视图的最佳实践
+
+1. 安全.一些数据表有着重要的信息.有些字段是保密的,不能让用户直接看到.这时就可以创建一个视图,在这张视图中只保留一部分字段.这样,用户就可以查询自己需要的字段,不能查看保密的字段.
+
+2. 性能.关系数据库的数据常常会分表存储,使用外键建立这些表的之间关系.这时,数据库查询通常会用到连接(join).这样做不但麻烦,效率相对也比较低,如果建立一个视图,将相关的表和字段组合在一起,就可以避免使用join查询数据
+
+3. 灵活.如果系统中有一张旧的表,这张表由于设计的问题,即将被废弃,然而,很多应用都是基于这张表,不易修改.这时就可以建立一张视图,视图中的数据直接映射到新建的表.这样,就可以少做很多改动,也达到了升级数据表的目的
+
+## MySQL管理
+
+### 用户管理
+
+### MySQL管理细节
+
+1. 在创建用户的时候,如果不指定Host,则为%,%表示所有IP都有连接权限---create user xxx;
+
+2. create user 'xxx'@'192.168.1.%'表示xxx用户在192.168.1.*的ip可以登陆mysql
+
+3. 在删除用户的时候,如果host不是%需要明确知道'用户'@'host值'
