--- a/note/19.JDBC和连接池.md
+++ b/note/19.JDBC和连接池.md
@@ -12,6 +12,18 @@
 
 # JDBC快速入门
 
+```sql
+use test01;
+create table actor (
+    id int primary key auto_increment,
+    name varchar(32) not null default '',
+    sex char(1) not null default '女',
+    borndate datetime,
+    phone varchar(12)
+);
+```
+
+
 ## JDBC程序编写步骤
 
 1. 注册驱动-加载Driver类
@@ -47,6 +59,22 @@
 4. SQL注入是利用某些系统没有对用户输入的数据进行充分的检查,而在用户输入数据中注入非法的SQL语句段或命令,恶意攻击数据库
 
 5. 要防范SQL注入,只要用PreparedStatement取代Statement就可以了
+
+## PreparedStatement
+
+1. PreparedStatement 执行的SQL语句中的参数用问号(?)来表示，调用PreparedStatement对象的setXxx()方法来设置这些参数。setXxx()方法有两个参数，第一个参数是要设置的SQL语句中的参数的索引(从1开始)，第二个是设置SQL语句中的参数的值
+
+2. 调用executeQuery()，返回ResultSet对象
+
+3. 调用executeUpdate(): 执行更新，包括增、删、修改
+
+### 预处理的好处
+
+1. 不再使用+拼接sql语句，减少语法错误
+
+2. 有效的解决了sql注入的问题
+
+3. 大大减少了编译次数，效率较高
 
 # JDBC API
 
