add database poor

--- a/note/10.常用类.md
+++ b/note/10.常用类.md
@@ -10,7 +10,7 @@
 
 3. 自动装箱底层调用的是valueOf方法
 
-### 包装类转Stringss
+### 包装类转String
 
 ```java
 Integer i = 1;
@@ -249,5 +249,4 @@ bigDecimal.divide(bigDecimal2, BigDecimal.ROUND_CEILING);
 3. LocalDateTime 包含日期+时间,可以获取时间字段(年月日时分秒)
 
 ## DataTimeFormatter格式日期类
-
 
