--- a/note/19.JDBC和连接池.md
+++ b/note/19.JDBC和连接池.md
@@ -80,13 +80,91 @@ create table actor (
 
 ![jdbc的API](./19.JDBC和连接池/2.JDBC的API.png)
 
+## DriverManager驱动管理类
+
+### getConnection(url, user, pwd) 获取连接
+
+## Connection接口
+
+### createStatement创建对象
+
+### preparedStatement(sql)生成预处理对象
+
+## Statement接口
+
+### executeUpdate(sql) 执行DML语句，返回影响的行数
+
+### executeQuery(sql)执行查询，返回ResultSet对象
+
+### execute(sql), 返回boolean
+
+## PreparedStatement接口
+
+### executeUpdate()执行DML
+
+### executeQuery()执行查询，返回ResultSet
+
+### execute()执行任意sql，返回boolean
+
+### setXXX(占位符索引，占位符的值)，解决SQL注入
+
+### setObject(占位符索引，占位符的值)
+
+## ResultSet(结果集合)
+
+### next()
+
+### previous()
+
+### getXXX()
+
+### getObject()
+
 # JDBCUtils
 
 # 事务
 
+## 基本介绍
+
+> 1. JDBC程序中当一个Conncetin对象创建时，默认情况下是自动提交事务：每次执行一个SQL语句时，如果执行成功，就会想数据库自动提交，而不能回滚
+>
+> 2. JDBC程序中为了让多个SQL语句作为一个整体执行，需要使用事务
+>
+> 3. 在调用Connection的setAutoCommit(false)可以取消自动提交事务
+> 
+> 4. 在所有的SQL语句都成功执行后，调用commit();方法提交事务
+>
+> 5. 在其中某个操作失败或出现异常时，调用rollback();方法回滚事务
+
 # 批处理
 
+## 基本介绍
+
+1. 当需要成批插入或者更新记录时，可以使用Java的批量更新机制，这一机制允许许多条语句一次性提交给数据库批量处理，通常情况下比单独提交处理更有效率
+
+2. JDBC的批量处理语句包括下面方法：
+
+   - addBatch(): 添加需要批量处理的SQL语句或参数
+
+   - executeBatch()：执行批量处理语句
+
+   - clearBatch()：清空批处理包的语句
+
+3. JDBC连接MySQL时，如果要使用批处理功能，请在url中加参数？rewriteBatchedStatements=true
+
+4. 批处理往往和PreparedStatement一起搭配使用，可以既减少编译次数，又减少运行次数，效率大大提高
+
 # 连接池
+
+## 传统获取Connection问题分析
+
+1. 传统的JDBC数据库连接使用DriverManager来获取，每次向数据库建立连接的时候都要将Connection加载到内存中，再验证IP地址，用户名和密码，需要数据库连接的时候，就向数据库要求一个，频繁的进行数据库连接操作将占用很多的系统资源，容易造成服务器崩溃。
+
+2. 每一次数据库连接，使用完成后都得断开，如果程序出现异常而未能关闭，将导致数据库内存泄露，最终将导致重启数据库
+
+3. 传统获取连接的方式，不能控制创建的连接数量，如连接过多，也可能导致内存泄露，MySQL崩溃
+
+4. 解决传统开发中的数据库连接问题，可以采用数据库连接池技术
 
 # Apache--DBUtils
 
