--- a/note/19.JDBC和连接池.md
+++ b/note/19.JDBC和连接池.md
@@ -166,6 +166,70 @@ create table actor (
 
 4. 解决传统开发中的数据库连接问题，可以采用数据库连接池技术
 
+## 数据库连接池基本介绍
+
+1. 预先在缓冲池中放入一定数量的连接，当需要建立数据库连接时，只需要从"缓冲池"中取出一个，使用完毕之后再放回去
+
+2. 数据库连接池负责分配、管理和释放数据库连接，它允许应用程序重复使用一个现有的数据库连接，而不是重新简历一个
+
+3. 当应用程序向连接池请求的连接数超过最大连接数量时，这些请求将被加入到等待队列中
+
+## 数据库连接池种类
+
+1. JDBC的数据库连接池使用javax.sql.DataSource来表示，DataSource只是一个接口，该接口通常由第三方提供实现
+
+2. C3P0数据库连接池，速度相对较满，稳定性不错
+
+3. DBCP数据库连接池，速度想但C3P0快，但不稳定
+
+4. Proxool数据库连接池，有监控连接池族状态的功能，稳定性较c3p0差一点
+
+5. BoneCP数据库连接池，速度快
+
+6. Druid(德鲁伊)是阿里提供的数据库连接池，集DBCP、C3P0、Proxool优点与一身的数据库连接池
+
 # Apache--DBUtils
 
+## 目的
+
+1. 解决数据库connection关闭后，结果集就无法使用的问题
+
+2. ResultSet只能用一次的问题
+
+3. ResultSet返回信息不方便的问题
+
+![DBUtils](./19.JDBC和连接池/3.DBUtil.png)
+
+## 方法
+
+1. 使用ArrayList去add，即使关闭了，也依然保存在内存中
+
+## DBUtils基本介绍
+
+1. commons-dbutils是Apache组织提供的一个开源JDBC工具类库，它是对JDBC的封装，使用dbutils能极大简化jdbc编码的工作量
+
+## DbUtils类
+
+1. Queryrunner类：该类封装了SQL的执行，是线程安全的。可以实现增、删、改、查、批处理
+
+2. 使用JQueryRunner类实现查询
+
+3. ResultSetHandler接口：该接口用于处理java.sql.ResultSet,将数据按要求转换为另一种形态
+
+![Dbutils类](./19.JDBC和连接池/4.Dbutils类.png)
+
 # DAO增删改查-BasicDao
+
+## 以前的不足
+
+1. SQL语句是固定的，不能通过参数传入，通用性不好，需要进行改进，更方便执行增删改查
+
+2. 对于select操作，如果有返回值，返回类型不能固定，需要使用泛型
+
+## 基本说明
+
+1. Dao： data access object数据访问对象
+
+2. BasicDao的通用类，用来和数据库交互的，完成对数据库的crue操作
+
+3. 在BasicDao的基础上，实现一张表，对应一个Dao，更好的完成功能
